# poa-multi-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  start-dev.sh  start.sh
anti-agents/: .gitignore  Dockerfile  pyproject.toml  start.sh
anti-agents/docs/: MULTI_AGENT_ARCHITECTURE_DESIGN.md  MULTI_AGENT_QUICK_REFERENCE.md  QUICKSTART.md  README_MULTI_AGENT.md
anti-agents/examples/: api_client_example.py  simple_example.py
anti-agents/src/: config.py
anti-agents/src/api/: __init__.py  main.py
anti-agents/src/api/routers/: __init__.py  analysis.py  health.py
anti-agents/src/poa_agents/: content_analysis.py  data_collection.py
anti-agents/src/schemas/: __init__.py  outputs.py
anti-agents/src/services/: __init__.py
anti-agents/src/tools/: crawler_tools.py
anti-agents/tests/: __init__.py  test_tools.py
docs/: MULTI_AGENT_CODE_EXAMPLES.md  MULTI_AGENT_EVALUATION_GUIDE.md  MULTI_AGENT_IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_INDEX.md  QUICKSTART.md
examples/: api_client_example.py
src/: __init__.py  config.py
src/api/: main.py
src/api/routers/: __init__.py  analysis.py
src/poa_agents/: __init__.py  coordinator.py  decision_support.py  report_generation.py
src/services/: agent_runner.py
src/tools/: __init__.py  analysis_tools.py
tests/: test_agent_system.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/ChatInterface/: index.tsx
web/src/services/: api.ts
web/src/types/: index.ts
(+6 files in other folders)
