[project]
name = "poa-multi-agent"
version = "0.1.0"
description = "Multi-agent system for public opinion analysis using OpenAI Agents framework"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "openai-agents[redis,sqlalchemy]>=0.5.1",
    "openai>=2.8.0",
    "fastapi>=0.118.2",
    "uvicorn>=0.37.0",
    "pydantic==2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.30.0",
    "redis>=6.4.0",
    "httpx>=0.27.2",
    "python-dotenv>=1.1.1",
    "structlog>=25.5.0",
    "greenlet>=3.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.407",
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

